unpackaged/main/default/objects/Fee_Type__c/Fee_Type__c.object-meta.xml
<CustomObject>
    <label>Fee Type</label>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>Fee Type No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>