unpackaged/main/default/objects/Fee_Type__c/fields/Milestone_Format__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Format__c</fullName>
    <label>Milestone Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25/60/15</fullName>
            </value>
            <value>
                <fullName>25/65/10</fullName>
            </value>
            <value>
                <fullName>30/60/10</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>50/50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>