unpackaged/main/default/objects/Fee_Type__c/fields/Modular_Transactional__c.field-meta.xml
<CustomField>
    <fullName>Modular_Transactional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modular/Transactional</label>
    <type>Checkbox</type>
</CustomField>