unpackaged/main/default/objects/Fee_Type__c/fields/NS_Fee_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Fee_Type_ID__c</fullName>
    <label>NS Fee Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>