unpackaged/main/default/objects/Fee_Type__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fee Types</relationshipLabel>
    <relationshipName>Fee_Types</relationshipName>
    <type>Lookup</type>
</CustomField>