unpackaged/main/default/objects/Fee_Type__c/fields/Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Category__c</fullName>
    <label>Transaction Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>