unpackaged/main/default/objects/Fee_Type__c/fields/Transaction_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Detail__c</fullName>
    <label>Transaction Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Fleet Rental</fullName>
            </value>
            <value>
                <fullName>New Fleet Rental</fullName>
            </value>
            <value>
                <fullName>Existing Fleet Sale</fullName>
            </value>
            <value>
                <fullName>New Fleet Sale</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Pay All</fullName>
            </value>
            <value>
                <fullName>Pay at TOD</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>