unpackaged/main/default/objects/Fee_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Milestone_Format__c</columns>
    <columns>Modular_Transactional__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Type_Detail__c</columns>
    <columns>Transaction_Category__c</columns>
    <columns>NS_Fee_Type_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>